[package]
name = "respondio"
version = "0.0.1"
authors = ["Sebastian Zimmer <sebastian@cryptofacilities.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
inventory = "0.1.5"
respondio-core = { path = "./respondio-core" }
respondio-macros = { path = "./respondio-macros" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10.1"

[profile.release]
debug = true