[package]
name = "respondio-core"
version = "0.0.1"
authors = ["Sebastian Zimmer <sebastian@cryptofacilities.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = "0.1.5"
hyper = "0.13.1"
futures = "0.3"