[package]
name = "respondio-macros"
version = "0.1.0"
authors = ["Sebastian Zimmer <sebastian@cryptofacilities.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1"
respondio-core = { path = "../respondio-core" }